--- a/contact-us.html
+++ b/contact-us.html
@@ -143,24 +143,28 @@
         <div class="section-body footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3">
+                    <div class="col-xl-3 col-lg-3 col-12">
                         <img src="assets/logo-white.png" class="mb-4">
                         <ul class="sm-icons">
                             <li>
-                                <img src="assets/fb.png">List item
+                                <img src="assets/fb.png">
                             </li>
                             <li>
-                                <img src="assets/twitter.png">List item
+                                <img src="assets/twitter.png">
                             </li>
                             <li>
-                                <img src="assets/yt.png">List item
+                                <img src="assets/yt.png">
                             </li>
                         </ul>
                     </div>
                     <div class="col-xl-4 offset-xl-1 col-lg-4">
                         <ul class="list-group footer-nav"> 
-                            <li class="list-group-item">About Us</li>                             
-                            <li class="list-group-item">Disclaimer</li>                             
+                            <li class="list-group-item">
+                                <a href="about-us.html">About Us</a>
+                            </li>                             
+                            <li class="list-group-item">
+                                <a href="disclaimer.html">Disclaimer</a>
+                            </li>                             
                             <li class="list-group-item">
                                 <a href="terms-and-condition.html">Terms &amp; Conditions</a>
                             </li>                             
@@ -169,17 +173,18 @@
                             </li>                             
                         </ul>
                     </div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="title">Subscribe to our Newsletter</div>
-                        <form style="display: flex; justify-content: flex-end;">
-                            <div class="form-group mx-sm-3 mb-2">
-                                <label for="inputPassword2" class="sr-only">Password</label>
-                                <input type="email" class="form-control" id="inputPassword2" placeholder="Enter Email ID"/>
-                            </div>
-                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                        </form>
+                    <div class="col-xl-4 col-lg-5 col-9">
+                        <div class="title">Reach us at</div>
+                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
+Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
+Reach Us Email id</b> – support@finorator.com</p>
                     </div>
                 </div>
+                <hr>
+                <div class="row text-muted text-center" style="justify-content: center;">
+                    Copyright © 2021 All rights reserved with One Stop Global Financial Services | All logos and Trademarks registered with their respective owners
+</div>
             </div>
         </div>
         <!-- /.container -->
