--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@ under <span class="text-black-50">One Roof</span></h1>
         </div>
         <div class="section-body steps">
             <div class="container">
-                <div class="theme-head">How Finorator Works</div>
+                <div class="theme-head">How Finorator Works
+                    <div class="description text-left">Finorator helps you manage all your financial operations, teamed inside one platform
+</div>
+                </div>
                 <div class="row" style="align-items: center; justify-content: center;">
                     <div class="col-xl-2 col-lg-2 col-12 col-sm-6">
                         <div class="step-card">
@@ -670,7 +673,9 @@ Top Mutual Funds Recommendations for June 2021</h4>
                     </div>
                     <div class="col-xl-4 offset-xl-1 col-lg-4">
                         <ul class="list-group footer-nav"> 
-                            <li class="list-group-item">About Us</li>                             
+                            <li class="list-group-item">
+                                <a href="about-us.html">About Us</a>
+                            </li>                             
                             <li class="list-group-item">
                                 <a href="disclaimer.html">Disclaimer</a>
                             </li>                             
@@ -683,16 +688,17 @@ Top Mutual Funds Recommendations for June 2021</h4>
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-9">
-                        <div class="title">Subscribe to our Newsletter</div>
-                        <form style="display: flex; justify-content: flex-end;">
-                            <div class="form-group mx-sm-3 mb-2">
-                                <label for="inputPassword2" class="sr-only">Password</label>
-                                <input type="email" class="form-control" id="inputPassword2" placeholder="Enter Email ID"/>
-                            </div>
-                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                        </form>
+                        <div class="title">Reach us at</div>
+                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
+Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
+Reach Us Email id</b> – support@finorator.com</p>
                     </div>
                 </div>
+                <hr>
+                <div class="row text-muted text-center" style="justify-content: center;">
+                    Copyright © 2021 All rights reserved with One Stop Global Financial Services | All logos and Trademarks registered with their respective owners
+</div>
             </div>
         </div>
         <!-- /.container -->
