--- a/partner.html
+++ b/partner.html
@@ -179,6 +179,39 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         </div>
                     </div>
                 </div>
+                <div class="theme-head mt-4">Unique Selling Proposition</div>
+                <div class="row">
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/usp-1.svg">
+                            <div class="title">
+                                Refer and Earn
+</div>
+                            <div class="description">Send your unique referral link to your friends and earn commission on every policy purchase they make!
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/usp-2.svg">
+                            <div class="title">
+                                Earn through Online Leads
+</div>
+                            <div class="description">Register and share leads to earn incentives on every purchase the buyer makes from Finorator
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/usp-3.svg">
+                            <div class="title">
+                                Better Framework
+</div>
+                            <div class="description">Use our free financial calculator and tools like Customer Tracker, Instant Quotes & Policy Purchase, and Career Growth Training affiliated with IRDA and NISM certifications to grow your revenue by many folds
+</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section-body partner-form-section">
@@ -236,24 +269,28 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
         <div class="section-body footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3">
+                    <div class="col-xl-3 col-lg-3 col-12">
                         <img src="assets/logo-white.png" class="mb-4">
                         <ul class="sm-icons">
                             <li>
-                                <img src="assets/fb.png">List item
+                                <img src="assets/fb.png">
                             </li>
                             <li>
-                                <img src="assets/twitter.png">List item
+                                <img src="assets/twitter.png">
                             </li>
                             <li>
-                                <img src="assets/yt.png">List item
+                                <img src="assets/yt.png">
                             </li>
                         </ul>
                     </div>
                     <div class="col-xl-4 offset-xl-1 col-lg-4">
                         <ul class="list-group footer-nav"> 
-                            <li class="list-group-item">About Us</li>                             
-                            <li class="list-group-item">Disclaimer</li>                             
+                            <li class="list-group-item">
+                                <a href="about-us.html">About Us</a>
+                            </li>                             
+                            <li class="list-group-item">
+                                <a href="disclaimer.html">Disclaimer</a>
+                            </li>                             
                             <li class="list-group-item">
                                 <a href="terms-and-condition.html">Terms &amp; Conditions</a>
                             </li>                             
@@ -262,17 +299,18 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             </li>                             
                         </ul>
                     </div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="title">Subscribe to our Newsletter</div>
-                        <form style="display: flex; justify-content: flex-end;">
-                            <div class="form-group mx-sm-3 mb-2">
-                                <label for="inputPassword2" class="sr-only">Password</label>
-                                <input type="email" class="form-control" id="inputPassword2" placeholder="Enter Email ID"/>
-                            </div>
-                            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-                        </form>
+                    <div class="col-xl-4 col-lg-5 col-9">
+                        <div class="title">Reach us at</div>
+                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
+Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
+Reach Us Email id</b> – support@finorator.com</p>
                     </div>
                 </div>
+                <hr>
+                <div class="row text-muted text-center" style="justify-content: center;">
+                    Copyright © 2021 All rights reserved with One Stop Global Financial Services | All logos and Trademarks registered with their respective owners
+</div>
             </div>
         </div>
         <!-- /.container -->
