--- a/partner.html
+++ b/partner.html
@@ -104,19 +104,19 @@
 Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-type='[ "Supermarket.", "Bazaar." ]'></a></span></h1>
                             <p class="theme-p mb-4">Grow your expertise and increase your business revenue to become a technology-driven financial manager — Finotarian!</p>
                             <p class="theme-p mb-4">Increase your learning graph regularly with our IRDA and NISM affiliated certified trainings</p>
-                            <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
+                            <a class="theme-btn btn my-2 my-sm-0 theme-bg2" href="#partner-body">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section-body">
+        <div class="section-body" id="partner-body">
             <div class="container">
-                <div class="theme-head">Become a Partner</div>
+                <div class="theme-head text-center">Become a Partner</div>
                 <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, as well as other investments and using products of every segment to manage the financial operations of your business.<br><br><div class="text-center theme-color">You’re just one step away from your 
                         <b>Dream Career</b>
                     </div><b></b></p>
-                <div class="theme-head mt-4">Why become a Finorator Partner?</div>
+                <div class="theme-head mt-4 text-center">Why become a Finorator Partner?</div>
                 <div class="row">
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
@@ -179,7 +179,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         </div>
                     </div>
                 </div>
-                <div class="theme-head mt-4">Unique Selling Proposition</div>
+                <div class="theme-head mt-4 text-center">Unique Selling Proposition</div>
                 <div class="row">
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
@@ -216,7 +216,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
         </div>
         <div class="section-body partner-form-section">
             <div class="container">
-                <div class="theme-head mt-4">How can you be a Partner?</div>
+                <div class="theme-head mt-4 text-center">How can you be a Partner?</div>
                 <div class="row" style="align-items: center; justify-content: center;">
                     <div class="col-lg-12 mb-5">
                         <img src="assets/steps.png" class="w-100"/>
