--- a/about-us.html
+++ b/about-us.html
@@ -28,25 +28,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
+                            <a class="dropdown-item test">Products<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Mutual Fund</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Income Tax</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Real Estate</a>
                                 </li>
                             </ul>                             
                             <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
@@ -97,7 +97,7 @@
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center">
+                            <h1 class="theme-h1 text-center" style="margin-top: 0em; padding-top: 1em;">
 About Finorator</h1>
                         </div>
                     </div>
@@ -108,13 +108,15 @@ About Finorator</h1>
             <div class="container">
                 <div class="row">
                     <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Vision</div>
-                        <div class="description text-left">Financial freedom for everyone
+                        <img src="assets/vision.png"/>
+                        <div class="theme-head text-center">Our Vision</div>
+                        <div class="description text-center">Financial freedom for everyone
 </div>
                     </div>
                     <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Mission</div>
-                        <div class="description text-left">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
+                        <img src="assets/mission.png"/>
+                        <div class="theme-head text-center">Our Mission</div>
+                        <div class="description text-center">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
 </div>
                     </div>
                 </div>
@@ -122,47 +124,59 @@ About Finorator</h1>
         </div>
         <div class="section-body">
             <div class="container">
-                <div class="theme-head">
+                <div class="theme-head text-center">
                     Who we are ?                     
-
-                    <div class="description text-left">Our Team of CA Spartan have made FINORATOR a unified platform tailored to help you accomplish your financial goals & helps you to manage all financial operations under one platform also as to add financial freedom into your life
+                    <div class="description text-center">Our team of Chartered Accountant professional specialized in the field of finance have made a unified platform FINORATOR to help you accomplish your financial goals & manage all financial operations inside a single platform.
 </div>
                 </div>
-                <div class="row">
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>K. APOORV</h3>
-                        <p>Founder</p>
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row" style="justify-content: center;">
+                                <div class="team-card col-xl-3 col-lg-4">
+                                    <img src="assets/person.jpeg">
+                                    <h3>S. Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
+                                    <p>Founder</p>
+                                </div>
+                                <div class="team-card col-xl-3 col-lg-4">
+                                    <img src="assets/person.jpeg">
+                                    <h3>K. APOORV</h3>
+                                    <p>Founder</p>
+                                </div>
+                                <div class="team-card col-xl-3 col-lg-4">
+                                    <img src="assets/person.jpeg">
+                                    <h3>Ayush Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
+                                    <p>Product Development Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row" style="justify-content: center;">
+                                <div class="team-card col-lg-4 col-xl-3">
+                                    <img src="assets/person.jpeg">
+                                    <h3>Dikshita Agrawal<br><span style="font-size: 16px;">(Company Secretary)</span></h3>
+                                    <p>Product Development Manager</p>
+                                </div>
+                                <div class="team-card col-xl-3 col-lg-4">
+                                    <img src="assets/person.jpeg">
+                                    <h3>Anjali Patel</h3>
+                                    <p>HR Manager</p>
+                                </div>
+                                <div class="team-card col-xl-3 col-lg-4">
+                                    <img src="assets/person.jpeg">
+                                    <h3>Indra Pratap Singh</h3>
+                                    <p>Senior Operational Manager</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>S. Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Founder</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Ayush Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Team Member -
-Product Development & Operational Manager</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Dikshita Agrawal<br><span style="font-size: 16px;">(Company Secretary)</span></h3>
-                        <p>Team member -
-Operations  & Channel Partner  Development</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Miss Anjali Patel</h3>
-                        <p>Team member - 
-Corporate Consultant & Human Resource Manager ( HR)</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Mr. Indra Pratap Singh</h3>
-                        <p>Team Member 
-Technical Support, Marketing & Sales Manager</p>
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev" style="padding-right: 3em;"> <span class="carousel-control-prev-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt2.png');"></span> <span class="sr-only">Previous</span> </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next" style="padding-left: 3em;"> <span class="carousel-control-next-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt1.png');"></span> <span class="sr-only">Next</span> </a>
                 </div>
             </div>
         </div>
@@ -211,8 +225,9 @@ Technical Support, Marketing & Sales Manager</p>
                     <div class="col-xl-3 col-lg-3 col-sm-6">
                         <div class="text-center feature-smallcard">
                             <img src="assets/side-feature3.svg">
-                            <div class="title">Effortless
-                                <br> Universal KYC
+                            <div class="title">One Time 
+                                <br>
+                                Universal KYC
                             </div>
                             <div class="description">Tired of registering everywhere for KYC? With Finorator, you need to register digitally only once for all your financial uses and applications.
 </div>
@@ -221,7 +236,7 @@ Technical Support, Marketing & Sales Manager</p>
                     <div class="col-xl-3 col-lg-3 col-sm-6">
                         <div class="text-center feature-smallcard">
                             <img src="assets/side-feature4.svg">
-                            <div class="title">Integrated Financial solutions and uses</div>
+                            <div class="title">Integrated Financial solutions</div>
                             <div class="description">No need to jump between different applications for different purposes. Using Finorator, you can integrate data of investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
                         </div>
                     </div>
