--- a/index.html
+++ b/index.html
@@ -394,14 +394,14 @@ Top Mutual Funds Recommendations for June 2021</h4>
             </div>
         </div>
         <div class="section-body">
-            <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel" data-interval="false">
+            <div id="carouselExampleControls2" class="carousel slide logos" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="container">
                             <div class="theme-head text-center">Our Mutual Funds Partners</div>
                             <div class="segment-main">
                                 <marquee width="80%" direction="left" scrollamount="12">
-                                    <div class="row" style="justify-content: center; align-items: center; display: flex;">
+                                    <div style="justify-content: center; align-items: center; display: flex;">
                                         <div class="col-xl-2 col-lg-2">
                                             <div>
                                                 <img src="assets/Companies%20Logo%20PNG/Mutual%20Fund/ABSL.png">
@@ -512,7 +512,7 @@ Top Mutual Funds Recommendations for June 2021</h4>
                             <div class="theme-head text-center">Our Loan Partners</div>
                             <div class="segment-main">
                                 <marquee width="80%" direction="left" scrollamount="12">
-                                    <div class="row" style="justify-content: center; align-items: center;">
+                                    <div style="justify-content: center; align-items: center; display: flex;">
                                         <div class="col-xl-2 col-lg-2">
                                             <div>
                                                 <img src="assets/Companies%20Logo%20PNG/Loan/ABSL.png">
@@ -628,7 +628,7 @@ Top Mutual Funds Recommendations for June 2021</h4>
                             <div class="theme-head text-center">Our Insurance Partners</div>
                             <div class="segment-main">
                                 <marquee width="80%" direction="left" scrollamount="12">
-                                    <div class="row" style="justify-content: center; align-items: center;">
+                                    <div style="justify-content: center; align-items: center; display: flex;">
                                         <div class="col-xl-2 col-lg-2">
                                             <div>
                                                 <img src="assets/Companies%20Logo%20PNG/Insurance/Bajaj%20Allianz.png">
@@ -715,8 +715,8 @@ Top Mutual Funds Recommendations for June 2021</h4>
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt2.png');"></span> <span class="sr-only">Previous</span> </a>
-                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt1.png');"></span> <span class="sr-only">Next</span> </a>
+                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev" style="padding-top: 3em;"> <span class="carousel-control-prev-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt2.png');"></span> <span class="sr-only">Previous</span> </a>
+                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next" style="padding-top: 3em;"> <span class="carousel-control-next-icon" aria-hidden="true" style="background-image: url('assets/dashicons_arrow-left-alt1.png');"></span> <span class="sr-only">Next</span> </a>
             </div>
         </div>
         <div class="section-body partner">
